--- a/classifier/templates/classifier/footer.html
+++ b/classifier/templates/classifier/footer.html
@@ -1,4 +1,8 @@
-<footer>
-    <p>Author: Hege Refsnes</p>
-    <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+<footer class="bg-light text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2022 Copyright:
+    <a class="text-dark">Winson Evangelis Sutanto</a>
+  </div>
+  <!-- Copyright -->
 </footer>
