--- a/classifier/templates/classifier/index.html
+++ b/classifier/templates/classifier/index.html
@@ -1,103 +1,143 @@
 {% extends 'classifier/base.html' %}
 
 {% block main_block %}
+<h4 style="text-align:center;">Diabetes Classifier</h4>
+<form class="container" action="/service/predict" method="post">
+  {% csrf_token %}
+  <div class="row">
+    <div class="form-group">
+      <label for="age">Age:</label>
+      <input type="number" id="age" name="age">
+    </div>
+  </div>  
 
-<form action="/service/predict" method="post">
-    {% csrf_token %}
-    <label for="age">Age:</label>
-    <input type="number" id="age" name="age"><br><br>
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="sex">Sex:</label>
+      <select class="form-select" name="sex" id="sex">
+        <option value="Male">Male</option>
+        <option value="Female">Female</option>
+      </select>
+    </div>
 
-    <label for="sex">Sex:</label>
-    <select name="sex" id="sex">
-      <option value="Male">Male</option>
-      <option value="Female">Female</option>
-    </select><br><br>
+    <div class="form-group col-md-6">
+      <label for="polyuria">Polyuria:</label>
+      <select class="form-select" name="polyuria" id="polyuria">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  </div>
 
-    <label for="polyuria">Polyuria:</label>
-    <select name="polyuria" id="polyuria">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="polydipsia">Polydipsia:</label>
+      <select class="form-select" name="polydipsia" id="polydipsia">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  
+    <div class="form-group col-md-6">
+      <label for="sudden_weight_loss">Sudden Weight Loss:</label>
+      <select class="form-select" name="sudden_weight_loss" id="sudden_weight_loss">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  </div>
 
-    <label for="polydipsia">Polydipsia:</label>
-    <select name="polydipsia" id="polydipsia">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="weakness">Weakness:</label>
+      <select class="form-select" name="weakness" id="weakness">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  
+    <div class="form-group col-md-6">
+      <label for="polyphagia">Polyphagia:</label>
+      <select class="form-select" name="polyphagia" id="polyphagia">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  </div>
 
-    <label for="sudden_weight_loss">Sudden Weight Loss:</label>
-    <select name="sudden_weight_loss" id="sudden_weight_loss">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="visual_blurring">Visual Blurring:</label>
+      <select class="form-select" name="visual_blurring" id="visual_blurring">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  
+    <div class="form-group col-md-6">
+      <label for="itching">Itching:</label>
+      <select class="form-select" name="itching" id="itching">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  </div>
 
-    <label for="weakness">Weakness:</label>
-    <select name="weakness" id="weakness">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="irritability">Irritability:</label>
+      <select class="form-select" name="irritability" id="irritability">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+    
+    <div class="form-group col-md-6">
+      <label for="delayed_healing">Delayed Healing:</label>
+      <select class="form-select" name="delayed_healing" id="delayed_healing">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  </div>
 
-    <label for="polyphagia">Polyphagia:</label>
-    <select name="polyphagia" id="polyphagia">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="partial_paresis">Partial Paresis:</label>
+      <select class="form-select" name="partial_paresis" id="partial_paresis">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  
+    <div class="form-group col-md-6">
+      <label for="muscle_stiffness">Muscle Stiffness:</label>
+      <select class="form-select" name="muscle_stiffness" id="muscle_stiffness">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  </div>
 
-    <label for="genital_thrush">Genital Thrush:</label>
-    <select name="genital_thrush" id="genital_thrush">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
+  <div class="row">
+    <div class="form-group col-md-6">
+      <label for="alopecia">Alopecia:</label>
+      <select class="form-select" name="alopecia" id="alopecia">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  
+    <div class="form-group col-md-6">
+      <label for="obesity">Obesity:</label>
+      <select class="form-select" name="obesity" id="obesity">
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+    </div>
+  </div>
 
-    <label for="visual_blurring">Visual Blurring:</label>
-    <select name="visual_blurring" id="visual_blurring">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
-
-    <label for="itching">Itching:</label>
-    <select name="itching" id="itching">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
-
-    <label for="irritability">Irritability:</label>
-    <select name="irritability" id="irritability">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
-
-    <label for="delayed_healing">Delayed Healing:</label>
-    <select name="delayed_healing" id="delayed_healing">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
-
-    <label for="partial_paresis">Partial Paresis:</label>
-    <select name="partial_paresis" id="partial_paresis">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
-
-    <label for="muscle_stiffness">Muscle Stiffness:</label>
-    <select name="muscle_stiffness" id="muscle_stiffness">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
-
-    <label for="alopecia">Alopecia:</label>
-    <select name="alopecia" id="alopecia">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
-
-    <label for="obesity">Obesity:</label>
-    <select name="obesity" id="obesity">
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-    </select><br><br>
-
-    <input type="submit" value="Submit">
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
 {% endblock %}
