--- a/classifier/templates/classifier/index.html
+++ b/classifier/templates/classifier/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="form-group col-md-6">
-      <label for="polyuria">Polyuria:</label>
+      <label for="polyuria">Do you experience excessive urination?</label>
       <select class="form-select" name="polyuria" id="polyuria">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -32,7 +32,7 @@
 
   <div class="row">
     <div class="form-group col-md-6">
-      <label for="polydipsia">Polydipsia:</label>
+      <label for="polydipsia">Do you experience excessive thirst/drinking?</label>
       <select class="form-select" name="polydipsia" id="polydipsia">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -40,7 +40,7 @@
     </div>
   
     <div class="form-group col-md-6">
-      <label for="sudden_weight_loss">Sudden Weight Loss:</label>
+      <label for="sudden_weight_loss">Do you experience sudden weight loss?</label>
       <select class="form-select" name="sudden_weight_loss" id="sudden_weight_loss">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -50,7 +50,7 @@
 
   <div class="row">
     <div class="form-group col-md-6">
-      <label for="weakness">Weakness:</label>
+      <label for="weakness">Do you feel weak?</label>
       <select class="form-select" name="weakness" id="weakness">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -58,7 +58,7 @@
     </div>
     
     <div class="form-group col-md-6">
-      <label for="polyphagia">Polyphagia:</label>
+      <label for="polyphagia">Do you experience excessive hunger?</label>
       <select class="form-select" name="polyphagia" id="polyphagia">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -68,7 +68,7 @@
 
   <div class="row">
     <div class="form-group col-md-6">
-      <label for="genital_thrush">Genital Thrush:</label>
+      <label for="genital_thrush">Do you experience yeast infection?</label>
       <select class="form-select" name="genital_thrush" id="genital_thrush">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -76,7 +76,7 @@
     </div>
 
     <div class="form-group col-md-6">
-      <label for="visual_blurring">Visual Blurring:</label>
+      <label for="visual_blurring">Do you experience episode of blurred vision?</label>
       <select class="form-select" name="visual_blurring" id="visual_blurring">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -86,7 +86,7 @@
 
   <div class="row">
     <div class="form-group col-md-6">
-      <label for="itching">Itching:</label>
+      <label for="itching">Do you experience episode of itching?</label>
       <select class="form-select" name="itching" id="itching">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -94,7 +94,7 @@
     </div>
 
     <div class="form-group col-md-6">
-      <label for="irritability">Irritability:</label>
+      <label for="irritability">Do you experience episode of irritability?</label>
       <select class="form-select" name="irritability" id="irritability">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -104,7 +104,7 @@
 
   <div class="row">
     <div class="form-group col-md-6">
-      <label for="delayed_healing">Delayed Healing:</label>
+      <label for="delayed_healing">Do you experience delayed healing when wounded?</label>
       <select class="form-select" name="delayed_healing" id="delayed_healing">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -112,7 +112,7 @@
     </div>
 
     <div class="form-group col-md-6">
-      <label for="partial_paresis">Partial Paresis:</label>
+      <label for="partial_paresis">Do you experience weakening of muscle/group of muscles?</label>
       <select class="form-select" name="partial_paresis" id="partial_paresis">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -122,7 +122,7 @@
 
   <div class="row">    
     <div class="form-group col-md-6">
-      <label for="muscle_stiffness">Muscle Stiffness:</label>
+      <label for="muscle_stiffness">Do you experience episode of muscle stiffness?</label>
       <select class="form-select" name="muscle_stiffness" id="muscle_stiffness">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -130,7 +130,7 @@
     </div>
 
     <div class="form-group col-md-6">
-      <label for="alopecia">Alopecia:</label>
+      <label for="alopecia">Do you experience hair loss?</label>
       <select class="form-select" name="alopecia" id="alopecia">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
@@ -140,7 +140,7 @@
 
   <div class="row">
     <div class="form-group col-md-6">
-      <label for="obesity">Obesity:</label>
+      <label for="obesity">Are you considered obese based on body mass index?</label>
       <select class="form-select" name="obesity" id="obesity">
         <option value="Yes">Yes</option>
         <option value="No">No</option>
