--- a/classifier/templates/classifier/footer.html
+++ b/classifier/templates/classifier/footer.html
@@ -1,8 +1,8 @@
-<footer class="bg-light text-center text-lg-start">
+<footer class="bg-light text-center text-lg-start fixed-bottom">
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2022 Copyright:
-    <a class="text-dark">Winson Evangelis Sutanto</a>
+    © 2020 Copyright:
+    <a class="text-dark" href="https://www.linkedin.com/in/winson-sutanto/" target=”_blank”>Winson Evangelis Sutanto</a>
   </div>
   <!-- Copyright -->
 </footer>
