--- a/classifier/templates/classifier/base.html
+++ b/classifier/templates/classifier/base.html
@@ -7,14 +7,9 @@
     <title>Diabetes Classifier</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
-        footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      margin: 0 !important;
-    }
     body{
-        background-color: rgb(50, 209, 196)
+        background-color: rgb(50, 209, 196);
+        padding-bottom: 80px;
     }
     </style>
 </head>
