add github link

--- a/classifier/templates/classifier/footer.html
+++ b/classifier/templates/classifier/footer.html
@@ -2,7 +2,9 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2020 Copyright:
-    <a class="text-dark" href="https://www.linkedin.com/in/winson-sutanto/" target=”_blank”>Winson Evangelis Sutanto</a>
+    <a class="text-dark" href="https://www.linkedin.com/in/winson-sutanto/" target=”_blank”>Winson Evangelis Sutanto</a> <br>
+    Github Link: 
+    <a class="text-dark" href="https://github.com/kaburov38/diabetes-classifier" target=”_blank”>https://github.com/kaburov38/diabetes-classifier</a>
   </div>
   <!-- Copyright -->
 </footer>
